tests/miniJava/neg/002847_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = return int [ 0 ] ; } }
